src/objects/Community_Program_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Program Offers</relationshipLabel>
        <relationshipName>Community_Program_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Makes the offer available. This is key for when an area has repetitive community programs. If there is already a program offer which ends in 1 month, and you are adding a new one 2 months out, don&apos;t check this checkbox until the first one ends.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_PPA_Rate__c</fullName>
        <label>Base PPA Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Site_Quality__c</fullName>
        <label>Baseline Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
        <relationshipLabel>Community Program Offers</relationshipLabel>
        <relationshipName>Community_Program_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Program_Capacity_kW__c</fullName>
        <label>Current Program Capacity (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <label>Current Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Special_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Special Part</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Community Program Offers</relationshipLabel>
        <relationshipName>Community_Program_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_Promotion_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Adopter Promotion Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Adopter_Promotion__c</fullName>
        <label>Early Adopter Promotion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criterion__c</fullName>
        <label>Eligibility Criterion</label>
        <picklist>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Values__c</fullName>
        <inlineHelpText>Semicolon delimited list of either zip codes, cities, or counties.  (Cities and counties must be given a state code as well.  For example: &quot;Norristown, PA; Annapolis Junction, MD;&quot;)</inlineHelpText>
        <label>Eligible Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extension_End_Date__c</fullName>
        <label>Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_PPA_Rate_Adder__c</fullName>
        <label>High PPA Rate Adder ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_PPA_Rate_Threshold__c</fullName>
        <label>High PPA Rate Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibility_Threshold__c</fullName>
        <label>Ineligibility Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_End_Date__c</fullName>
        <label>Initial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OneRoof_SiteQuality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OneRoof SiteQuality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_Adder__c</fullName>
        <label>Size Adder ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size_Threshold__c</fullName>
        <label>Size Threshold (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_1_Maximum_Capacity_kW__c</fullName>
        <label>Tier 1 Maximum Capacity (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Maximum_Capacity_kW__c</fullName>
        <label>Tier 2 Maximum Capacity (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Maximum_Capacity_kW__c</fullName>
        <label>Tier 3 Maximum Capacity (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Community Program Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Eligibility_Criterion__c</columns>
        <columns>Eligible_Values__c</columns>
        <columns>Active__c</columns>
        <columns>Current_Tier__c</columns>
        <columns>Early_Adopter_Promotion__c</columns>
        <columns>Tier_1_Maximum_Capacity_kW__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Initial_End_Date__c</columns>
        <columns>Extension_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CurrentlyActive</fullName>
        <booleanFilter>(1 AND 2 AND 3) or (1 and 2 and 5) or (1 and 3 and 4) or (1 and 4 and 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Eligibility_Criterion__c</columns>
        <columns>Eligible_Values__c</columns>
        <columns>Current_Tier__c</columns>
        <columns>Early_Adopter_Promotion__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Initial_End_Date__c</columns>
        <columns>Extension_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Initial_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Extension_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Initial_End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Extension_End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>CurrentlyActive</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPO-{00000}</displayFormat>
        <label>Community Program Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Program Offers</pluralLabel>
    <recordTypes>
        <fullName>Door_to_Door</fullName>
        <active>true</active>
        <label>Door to Door</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>